--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.2",
     "mongoose": "^7.5.0",
     "morgan": "~1.9.1",
